# ai-pdf-chatbot

./: .gitignore  CLAUDE.md  README.md  TODO.md  docker-compose.monitoring.yml  package.json
backend/: .env.example  .gitignore  MONITORING.md  pyproject.toml  setup.py
backend/app/: __init__.py  config.py  documents.py  main.py  models.py  monitoring.py  retrieval.py  thread_store.py
frontend/: jest.setup.js  package.json
frontend/__tests__/api/ingest/: route.integration.test.ts
frontend/app/: page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/thread/: route.ts
frontend/app/api/thread/[threadId]/: route.ts
frontend/lib/: backend-api.ts
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: ai-pdf-chatbot-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
supabase/migrations/: 20260424_align_documents_table_for_gemini_3072.sql
